--- a/src/components/study-v4/MainStudyView.scss
+++ b/src/components/study-v4/MainStudyView.scss
@@ -143,6 +143,12 @@
             .v4-explanation-detail {
                 .v4-explanation-detail-title {
                     font-size: 14px;
+
+                    > span {
+                        display: flex;
+                        align-items: center;
+                        cursor: pointer;
+                    }
                 }
 
                 .v4-explanation {
