--- a/src/components/v4-material/V4CircleProgress.scss
+++ b/src/components/v4-material/V4CircleProgress.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 16px;
+    // padding: 16px;
     .rotate-ifinite {
         border-radius: 50%;
         width: 32px;
