--- a/src/components/header/HeaderV4.scss
+++ b/src/components/header/HeaderV4.scss
@@ -153,6 +153,10 @@
             }
             a {
                 color: rgba(89, 89, 89);
+                display: flex;
+                width: 100%;
+                justify-content: space-between;
+                align-items: center;
             }
         }
         #collapse-content-state {
