--- a/src/components/header/V4LoginDialog.scss
+++ b/src/components/header/V4LoginDialog.scss
@@ -125,10 +125,9 @@
                 bottom: 24px;
                 left: 50%;
                 transform: translateX(-50%);
-            }
-            .processing {
-                position: absolute;
-                bottom: 24px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
         }
     }
@@ -175,7 +174,7 @@
                     padding: 0 16px;
                     .verify,
                     .processing {
-                        bottom: 80px;
+                        // bottom: 80px;
                     }
                     .verify {
                         max-width: 312px;
