--- a/src/components/study-v4/ChoicePannelV4.scss
+++ b/src/components/study-v4/ChoicePannelV4.scss
@@ -14,6 +14,22 @@
         text-align: left;
         font-size: 14px;
         line-height: 18px;
+
+        .check-box {
+            width: 14px;
+            height: 14px;
+            flex: none;
+            border-radius: 2px;
+            border: 2px solid #737373;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            svg {
+                display: none;
+            }
+        }
+
         &:hover:not(&.review),
         &.selected {
             background-color: hsla(0, 0%, 13%, 0.039);
@@ -21,13 +37,35 @@
 
         &.selected {
             border-color: rgba(33, 33, 33, 0.3);
+            .check-box {
+                background-color: #737373;
+                svg {
+                    display: block;
+                }
+            }
         }
         &.correct {
             border-color: #00c17c;
+
+            .check-box {
+                background-color: #00c17c;
+                border-color: #00c17c;
+                svg {
+                    display: block;
+                }
+            }
         }
 
         &.failed {
             border-color: #fb7072;
+
+            .check-box {
+                background-color: #fb7072;
+                border-color: #fb7072;
+                svg {
+                    display: block;
+                }
+            }
         }
 
         .v4-answered-content {
