--- a/src/components/study-v4/end-test-v4/index.scss
+++ b/src/components/study-v4/end-test-v4/index.scss
@@ -25,7 +25,7 @@
 
         &-description {
             margin-top: 16px;
-            color: rgba(33, 33, 33, 0.52);
+            color: #000;
             text-align: center;
             font-size: 12px;
             font-style: normal;
