--- a/src/components/study-v4/end-test-v4/index.scss
+++ b/src/components/study-v4/end-test-v4/index.scss
@@ -115,6 +115,7 @@
             .next-level {
                 border: 1px solid #7c6f5b;
                 background-color: transparent;
+                text-transform: capitalize;
                 color: #7c6f5b;
                 margin-left: 12px;
             }
