--- a/src/pages/upgrade-pro/index.scss
+++ b/src/pages/upgrade-pro/index.scss
@@ -1,3 +1,6 @@
+.layout-2 {
+    padding-bottom: 32px;
+}
 .pro-background {
     background-color: #14674a;
     background-image: url(/public/images/passemall/background-pro.png);
