--- a/src/pages/contact/index.scss
+++ b/src/pages/contact/index.scss
@@ -124,3 +124,230 @@
     position: relative;
     z-index: 1;
 }
+.contact-page * {
+    box-sizing: border-box;
+}
+.contact-page {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: #f0f2fe;
+    .cluster-infor-title {
+        display: flex;
+        width: 100%;
+        .cluster-img-info {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            padding-left: 80px;
+            padding-bottom: 48px;
+            background-image: url(/public/images/contacts/cdl/truck-contact-page.png);
+            background-size: cover;
+            background-position: center;
+            height: 885px;
+            width: 50%;
+            .title {
+                color: #ffffff;
+                font-size: 32px;
+                line-height: 48px;
+                font-weight: 600;
+                text-align: left;
+            }
+            .intro {
+                color: #ffffffcc;
+                font-size: 18px;
+                line-height: 27px;
+                font-weight: 400;
+                text-align: left;
+                margin-top: 4px;
+            }
+            img {
+                width: 30px;
+                height: 30px;
+            }
+            .text-info {
+                color: #ffffff;
+                font-size: 18px;
+                font-weight: 500;
+                line-height: 27px;
+            }
+            .cluster-email {
+                display: flex;
+                gap: 16px;
+                margin-top: 24px;
+            }
+
+            .cluster-location {
+                display: flex;
+                gap: 16px;
+                margin-top: 24px;
+            }
+            .socials-icon {
+                gap: 16px;
+                margin-top: 24px;
+            }
+        }
+        .cluster-send-mail {
+            width: 50%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-end;
+            align-items: center;
+            background-color: #e6eaff;
+            padding-right: 80px;
+            .form-send-mail {
+                display: flex;
+                flex-direction: column;
+
+                background-color: #fff;
+                padding: 24px 24px 0 24px;
+                border-radius: 16px;
+                box-shadow: 0px 4px 8px 0px #343f823d;
+                p {
+                    margin: 0;
+                    color: #212121;
+                    font-size: 16px;
+                    line-height: 24px;
+                    font-weight: 400;
+                    text-align: left;
+                }
+                .title {
+                    color: #212121;
+                    font-size: 52px;
+                    line-height: 78px;
+                    font-weight: 700;
+                    text-align: center;
+                }
+                .description {
+                    color: #21212185;
+                    font-size: 16px;
+                    line-height: 24px;
+                    font-weight: 400;
+                    text-align: center;
+                }
+                .noti {
+                    color: #fd5f57;
+                    font-size: 14px;
+                    line-height: 21px;
+                    font-weight: 400;
+                    text-align: left;
+                    margin-top: 8px;
+                }
+                .input-mail {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 4px;
+                    width: 100%;
+                    p {
+                        margin-top: 32px;
+                    }
+                    .group-input-noti {
+                        input {
+                            border: 1px solid #21212129;
+                            width: 100%;
+                            border-radius: 8px;
+                            padding: 16px;
+                            &::placeholder {
+                                color: #21212185;
+                                opacity: 0.8;
+                            }
+                            &:focus {
+                                outline: none;
+                            }
+                        }
+                    }
+                }
+                .input-message {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 4px;
+                    margin-top: 24px;
+                    .group-textarea-noti {
+                        .noti {
+                            margin: 0;
+                        }
+                        textarea {
+                            resize: none;
+                            padding: 16px 0 0 16px;
+                            border: 1px solid #21212129;
+                            border-radius: 8px;
+                            width: 100%;
+                            height: 120px;
+                            &:focus {
+                                outline: none;
+                            }
+                            &::placeholder {
+                                color: #21212185;
+                                opacity: 0.8;
+                            }
+                        }
+                        .message-send-mail::-webkit-scrollbar {
+                            width: 4px; /* Độ rộng của thanh cuộn */
+                        }
+
+                        /* Track của thanh cuộn */
+                        .message-send-mail::-webkit-scrollbar-track {
+                            background: #f3f3f3; /* Màu nền của track */
+                            border-radius: 8px; /* Bo góc */
+                        }
+
+                        /* Phần kéo của thanh cuộn */
+                        .message-send-mail::-webkit-scrollbar-thumb {
+                            background: #c0c0c0; /* Màu của thanh kéo */
+                            border-radius: 4px; /* Bo góc */
+                        }
+
+                        /* Hover trên thanh kéo */
+                        .message-send-mail::-webkit-scrollbar-thumb:hover {
+                            background: #a0a0a0; /* Màu khi hover */
+                        }
+                    }
+                }
+
+                button {
+                    width: 100%;
+                    background-color: #343f82;
+                    border: none;
+                    border-radius: 8px;
+                    color: #fff;
+                    font-weight: 600;
+                    font-size: 16px;
+                    line-height: 24px;
+                    padding: 16px 0 16px 0;
+                    margin: 32px 0 19px 0;
+                    cursor: pointer;
+                }
+                img {
+                    max-width: 512px;
+                    max-height: 184px;
+                    padding: 0 8px 0 8px;
+                }
+            }
+        }
+    }
+    .cluster-faqs {
+        display: flex;
+        flex-direction: column;
+        .title {
+            width: 100%;
+            font-size: 48px;
+            font-weight: 600;
+            line-height: 72px;
+            text-align: center;
+            color: #212121;
+        }
+        p {
+            margin: 0;
+        }
+        .cluster-aq {
+            .cluster-question-button {
+            }
+            .answer {
+            }
+        }
+    }
+}
+.socials-icon {
+    display: flex;
+}
