--- a/src/components/homepage/ListState.scss
+++ b/src/components/homepage/ListState.scss
@@ -2,6 +2,8 @@
     height: 0;
     overflow: hidden;
     transition: 0.4s all;
+    border-radius: 4px;
+    background-color: #212121b2;
 }
 .select-state {
     display: grid;
