--- a/src/components/footer/FooterLandingV4.scss
+++ b/src/components/footer/FooterLandingV4.scss
@@ -1,8 +1,14 @@
 .v4-footer-landing-0 {
-    padding-top: 90px;
-    height: 600px;
-    overflow: hidden;
-
+    padding-top: 64px;
+    // height: 600px;
+    // overflow: hidden;
+    width: 100%;
+    background: #343f82;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
     .v4-svg-desktop {
         display: none;
     }
@@ -10,73 +16,150 @@
     .v4-footer-landing-container-0 {
         width: 100%;
         height: 100%;
-        background: #7c6f5b;
-        margin-top: -8px;
-        padding-top: 24px;
-        .v4-footer-landing-container-11 {
-            .v4-footer-landing-container-111 {
+        // margin-top: -8px;
+        // padding-top: 24px;
+
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        box-sizing: border-box;
+        .title {
+            text-transform: uppercase;
+            margin-bottom: 24px;
+            color: #fff;
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 20px;
+            text-align: left;
+        }
+        .item-footer {
+            min-width: 160px;
+        }
+        .cluster-logo-description {
+            .logo-footer-v4 {
                 display: flex;
-                justify-content: space-between;
+            }
+            display: flex;
+            gap: 24px;
+            flex-direction: column;
+
+            span {
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 21px;
+                text-align: start;
+                color: #fff;
+                max-width: 284px;
+            }
+        }
+        .cluster-company-legal {
+            display: flex;
+            justify-content: space-between;
+        }
+        .cluster-legal {
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 24px;
+            text-align: left;
+        }
+        a {
+            text-decoration: none;
+            color: #fff;
+            font-size: 14px;
+        }
+        // a:not(:first-child) {
+        //     margin-left: 32px;
+        // }
+        .cluster-company {
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 24px;
+            text-align: left;
+        }
+        .support {
+            max-width: 283px;
+            > div {
+                color: #fff !important;
+                margin-bottom: 16px;
+
+                font-weight: 500;
+                line-height: 24px;
+                text-align: left;
+            }
+            .text-info {
+                color: #fff;
+                font-size: 16px;
+                font-weight: 500;
+                line-height: 24px;
+                text-align: left;
+            }
+            .cluster-email {
+                display: flex;
+                gap: 12px;
                 align-items: center;
-                .v4-contact-social-desktop {
-                    display: none;
-                }
-                .logo-footer-v4 {
-                    display: flex;
-                }
-                .img-logo-footer {
-                    height: 40px; //1:4
-                    max-width: 160px;
+                img {
+                    width: 24px;
+                    height: 24px;
                 }
             }
-
-            .v4-footer-landing-container-112 {
+            .cluster-location {
                 display: flex;
-                flex-direction: column;
-                padding-top: 32px;
-                > div {
-                    color: #fff !important;
-                    margin-bottom: 16px;
-                    font-size: 18px;
-                    font-weight: 500;
-                    text-align: center;
-                    line-height: 28px;
+                gap: 12px;
+                align-items: center;
+                img {
+                    width: 24px;
+                    height: 24px;
                 }
-                .v4-input-field {
-                    margin: 4px 0;
-                    input {
+            }
+            .v4-input-field {
+                margin: 12px 0;
+                input {
+                    color: #fff;
+                    width: 100%;
+                    padding: 12px;
+                    border: 1px solid #fff;
+                    border-radius: 6px;
+                    box-sizing: border-box;
+                    outline: none;
+                    background-color: transparent;
+                    &::placeholder {
                         color: #fff;
-                        padding: 10px;
-                        border: 1px solid #fff;
-                        border-radius: 6px;
-                        box-sizing: border-box;
-                        outline: none;
-                        background-color: transparent;
-                        width: -webkit-fill-available;
-                        &::placeholder {
-                            color: #fff;
-                        }
-                        &:-ms-input-placeholder {
-                            /* Internet Explorer 10-11 */
-                            color: #fff;
-                        }
-                        &::-ms-input-placeholder {
-                            /* Microsoft Edge */
-                            color: #fff;
-                        }
-                        &:focus {
-                            border: 1px solid #fff;
-                        }
-                    }
-                    p {
-                        color: #880000; //alert text
-                        margin: 0;
                         font-size: 14px;
+                        font-weight: 400;
+                        line-height: 20px;
                         text-align: left;
-                        padding-left: 4px;
+                    }
+                    &:-ms-input-placeholder {
+                        /* Internet Explorer 10-11 */
+                        color: #fff;
+                    }
+                    &::-ms-input-placeholder {
+                        /* Microsoft Edge */
+                        color: #fff;
+                    }
+                    &:focus {
+                        border: 1px solid #fff;
                     }
                 }
-
+                p {
+                    color: #880000; //alert text
+                    margin: 0;
+                    font-size: 14px;
+                    text-align: left;
+                    padding-left: 4px;
+                }
+            }
+            .footer-support {
+                margin-top: 28px;
+                display: flex;
+                width: 100%;
+                justify-content: flex-end;
                 .v4-footer-btn-contact-us {
                     padding: 12px 20px;
                     background-color: #fff;
@@ -92,89 +175,252 @@
             }
         }
 
-        .v4-footer-landing-container-12 {
-            padding-top: 32px;
-            border-top: 1px solid #e4e4e4;
-            display: flex;
-            margin-top: 16px;
-            justify-content: space-between;
-            flex-direction: column;
-            align-items: center;
+        // .v4-footer-landing-container-11 {
+        //     .v4-footer-landing-container-111 {
+        //         display: flex;
+        //         justify-content: space-between;
+        //         align-items: center;
+        //         .v4-contact-social-desktop {
+        //             display: none;
+        //         }
+        //         .logo-footer-v4 {
+        //             display: flex;
+        //         }
+        //         .img-logo-footer {
+        //             height: 40px; //1:4
+        //             max-width: 160px;
+        //         }
+        //     }
 
-            .v4-footer-landing-container-121 {
-                padding-top: 32px;
-                a {
-                    text-decoration: none;
-                    color: #fff;
-                    font-size: 14px;
-                }
-                a:not(:first-child) {
-                    margin-left: 32px;
-                }
+        //     .v4-footer-landing-container-112 {
+        //         display: flex;
+        //         flex-direction: column;
+        //         padding-top: 32px;
+        //         > div {
+        //             color: #fff !important;
+        //             margin-bottom: 16px;
+        //             font-size: 18px;
+        //             font-weight: 500;
+        //             text-align: center;
+        //             line-height: 28px;
+        //         }
+        //         .v4-input-field {
+        //             margin: 4px 0;
+        //             input {
+        //                 color: #fff;
+        //                 padding: 10px;
+        //                 border: 1px solid #fff;
+        //                 border-radius: 6px;
+        //                 box-sizing: border-box;
+        //                 outline: none;
+        //                 background-color: transparent;
+        //                 width: -webkit-fill-available;
+        //                 &::placeholder {
+        //                     color: #fff;
+        //                 }
+        //                 &:-ms-input-placeholder {
+        //                     /* Internet Explorer 10-11 */
+        //                     color: #fff;
+        //                 }
+        //                 &::-ms-input-placeholder {
+        //                     /* Microsoft Edge */
+        //                     color: #fff;
+        //                 }
+        //                 &:focus {
+        //                     border: 1px solid #fff;
+        //                 }
+        //             }
+        //             p {
+        //                 color: #880000; //alert text
+        //                 margin: 0;
+        //                 font-size: 14px;
+        //                 text-align: left;
+        //                 padding-left: 4px;
+        //             }
+        //         }
+
+        //         .v4-footer-btn-contact-us {
+        //             padding: 12px 20px;
+        //             background-color: #fff;
+        //             width: fit-content;
+        //             align-self: flex-end;
+        //             cursor: pointer;
+        //             margin-top: 4px;
+        //             font-size: 14px;
+        //             border: none;
+        //             display: flex;
+        //             line-height: 24px; // = svg height
+        //         }
+        //     }
+        // }
+
+        // .v4-footer-landing-container-12 {
+        //     padding-top: 32px;
+        //     border-top: 1px solid #e4e4e4;
+        //     display: flex;
+        //     margin-top: 16px;
+        //     justify-content: space-between;
+        //     flex-direction: column;
+        //     align-items: center;
+
+        //     .v4-footer-landing-container-121 {
+        //         padding-top: 32px;
+        //         a {
+        //             text-decoration: none;
+        //             color: #fff;
+        //             font-size: 14px;
+        //         }
+        //         a:not(:first-child) {
+        //             margin-left: 32px;
+        //         }
+        //     }
+        //     .v4-footer-landing-container-122 {
+        //         color: rgb(230, 230, 230);
+        //         font-size: 12px;
+        //         padding-top: 16px;
+        //     }
+        // }
+    }
+
+    .v4-footer-landing-container-1 {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        padding: 32px 0;
+        background-color: #181f47;
+        .footer-social {
+            display: flex;
+            width: 100%;
+
+            justify-content: space-between;
+            .v4-platform-logo-contact-0 {
+                display: flex;
+                gap: 16px;
             }
-            .v4-footer-landing-container-122 {
-                color: rgb(230, 230, 230);
-                font-size: 12px;
-                padding-top: 16px;
+            span {
+                color: #fff;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 16px;
+                text-align: left;
             }
         }
     }
-    @media screen and (min-width: 769px) {
-        height: 490px;
 
-        .v4-svg-desktop {
-            display: block;
-        }
-        .v4-svg-mobile {
-            display: none;
-        }
+    @media screen and (max-width: 768px) {
+        padding: 24px 0 0 0;
+        width: 100%;
         .v4-footer-landing-container-0 {
-            padding-top: 50px;
-            .v4-footer-landing-container-11 {
-                display: flex;
-                justify-content: space-between;
-                .v4-footer-landing-container-111 {
-                    flex-direction: column;
-                    justify-content: flex-start;
-                    align-items: flex-start;
-                    > *:not(:first-child) {
-                        margin-top: 32px;
-                    }
-                    .v4-contact-social-desktop {
-                        display: block;
-                    }
+            padding: 0 16px;
+            flex-direction: column;
+            gap: 16px;
+            align-items: unset;
+            .title {
+                margin-bottom: 8px;
+            }
+            .cluster-logo-description {
+                margin-bottom: 16px;
+                width: 100%;
+                span {
+                    text-align: center;
+                    max-width: 100%;
                 }
-                .v4-footer-landing-container-112 {
-                    padding-top: 0;
-                    > div {
-                        font-size: 16px;
-                        text-align: left;
-                        line-height: 24px;
-                    }
-                    .v4-input-field {
-                        margin: 8px 0;
-                    }
-                    .v4-footer-btn-contact-us {
-                        margin-top: 16px;
-                    }
+                .cluster-logo-protected {
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
                 }
             }
-
-            .v4-footer-landing-container-12 {
-                flex-direction: row;
-                margin-top: 24px;
-                .v4-contact-social-mobile {
-                    display: none;
+            .cluster-company {
+                gap: 8px;
+            }
+            .cluster-legal {
+                gap: 8px;
+            }
+            .support {
+                max-width: 100%;
+                gap: 8px;
+                .text-info {
+                    font-size: 14px;
                 }
-                .v4-footer-landing-container-121 {
-                    padding-top: 0;
+                .intro-suport {
+                    font-size: 14px;
                 }
-
-                .v4-footer-landing-container-122 {
-                    padding-top: 0;
+            }
+            // align-items: center;
+        }
+        .v4-footer-landing-container-1 {
+            padding: 24px 0;
+            .footer-social {
+                padding: 0 40px;
+                flex-direction: column;
+                align-items: center;
+                gap: 16px;
+                .v4-platform-logo-contact-0 {
+                    order: -1;
+                }
+                span {
+                    text-align: center;
                 }
             }
         }
+        // height: 490px;
+
+        // .v4-svg-desktop {
+        //     display: block;
+        // }
+        // .v4-svg-mobile {
+        //     display: none;
+        // }
+        // .v4-footer-landing-container-0 {
+        // padding-top: 50px;
+
+        // .v4-footer-landing-container-11 {
+        //     display: flex;
+        //     justify-content: space-between;
+        //     .v4-footer-landing-container-111 {
+        //         flex-direction: column;
+        //         justify-content: flex-start;
+        //         align-items: flex-start;
+        //         > *:not(:first-child) {
+        //             margin-top: 32px;
+        //         }
+        //         .v4-contact-social-desktop {
+        //             display: block;
+        //         }
+        //     }
+        //     .v4-footer-landing-container-112 {
+        //         padding-top: 0;
+        //         > div {
+        //             font-size: 16px;
+        //             text-align: left;
+        //             line-height: 24px;
+        //         }
+        //         .v4-input-field {
+        //             margin: 8px 0;
+        //         }
+        //         .v4-footer-btn-contact-us {
+        //             margin-top: 16px;
+        //         }
+        //     }
+        // }
+
+        // .v4-footer-landing-container-12 {
+        //     flex-direction: row;
+        //     margin-top: 24px;
+        //     .v4-contact-social-mobile {
+        //         display: none;
+        //     }
+        //     .v4-footer-landing-container-121 {
+        //         padding-top: 0;
+        //     }
+
+        //     .v4-footer-landing-container-122 {
+        //         padding-top: 0;
+        //     }
+        // }
+        // }
     }
 }
 
@@ -187,7 +433,7 @@
             height: 24px;
         }
     }
-    div:not(:first-child) {
-        margin-left: 16px;
-    }
+    // div:not(:first-child) {
+    //     margin-left: 16px;
+    // }
 }
