--- a/src/components/header/HeaderV4.scss
+++ b/src/components/header/HeaderV4.scss
@@ -3,52 +3,55 @@
     border-bottom: 1px solid #e4e4e4;
     .header-v4 {
         position: relative;
+        height: 52px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         .logo-header-v4 {
+            position: relative;
+            img {
+                height: 40px; //1:4
+                max-width: 160px;
+            }
             cursor: pointer;
             display: flex;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            img {
-                height: 32px;
-                max-width: 128px;
-            }
+        }
+        .cluster-right-header {
+            justify-content: space-between;
+            gap: 36px;
         }
         .header-menu-v4 {
             display: flex;
+            gap: 8px;
             align-items: center;
             color: rgba(89, 89, 89);
-            padding: 14px 12px;
             cursor: pointer;
             justify-content: flex-end;
             width: fit-content;
+            text-decoration-color: #343f82;
+
             margin-left: auto;
             span {
-                display: none;
+                color: #343f82;
+                display: block;
+                white-space: nowrap;
             }
         }
-    }
-    @media screen and (min-width: 769px) {
-        .header-v4 {
-            height: 52px;
+        .login-header {
+            cursor: pointer;
             display: flex;
-            justify-content: space-between;
             align-items: center;
-            .logo-header-v4 {
-                position: relative;
-                left: 0;
-                top: 0;
-                transform: none;
-                img {
-                    height: 40px; //1:4
-                    max-width: 160px;
-                }
+        }
+    }
+    @media screen and (max-width: 768px) {
+        .cluster-right-header {
+            gap: 12px !important;
+            .login-header {
+                display: none;
             }
             .header-menu-v4 {
-                span {
-                    display: block;
-                    padding-right: 12px;
+                .text-nemu {
+                    display: none;
                 }
             }
         }
