--- a/src/pages/contact/index.scss
+++ b/src/pages/contact/index.scss
@@ -1,135 +1,133 @@
-.contacts {
-    position: relative;
-    margin-bottom: 120px;
-    min-height: calc(100vh - 198px - 40px); // lấy theo Footer1
-    .contacts-container {
-        padding-bottom: 40px;
-        .logo {
-            z-index: 1;
-            position: relative;
-            padding-top: 40px;
-        }
-        .contact-header-container {
-            display: flex;
-            margin-bottom: 40px;
-            position: relative;
-            z-index: 1;
-            img {
-                display: block;
-                margin-left: auto;
-            }
-            .title-header {
-                font-weight: 600;
-                font-size: 48px;
-                line-height: 72px;
-                color: #ffffff;
-                margin-top: 90px;
-            }
-            .description-header {
-                font-weight: 500;
-                font-size: 18px;
-                line-height: 27px;
-                color: rgba(255, 255, 255, 0.52);
-                margin-top: 96px;
-                margin-bottom: 60px;
-            }
-            .media-container {
-                display: flex;
-                align-items: center;
-                margin-bottom: 60px;
-                svg {
-                    width: 56px;
-                    height: 56px;
-                }
-                .media-content {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: flex-start;
-                    margin-left: 40px;
-                    .title {
-                        font-weight: 500;
-                        font-size: 16px;
-                        line-height: 24px;
-                        color: #ffffff;
-                    }
-                    .description {
-                        font-weight: 400;
-                        font-size: 16px;
-                        line-height: 24px;
-                        text-decoration-line: underline;
-                        color: rgba(255, 255, 255, 0.52);
-                    }
-                }
-            }
-        }
-        .contact-background-header {
-            border-radius: 0px 0px 80px 0px;
-            background: #212121;
-            position: absolute;
-            width: 55%;
-            height: 100%;
-            top: 0px;
-            left: 0px;
-            z-index: 0;
-        }
-        .background-dot {
-            position: absolute;
-            right: 0px;
-            top: 0px;
-            width: 55%;
-            height: 100%;
-            z-index: 0;
-        }
-    }
-}
+// .contacts {
+//     position: relative;
+//     margin-bottom: 120px;
+//     min-height: calc(100vh - 198px - 40px); // lấy theo Footer1
+//     .contacts-container {
+//         padding-bottom: 40px;
+//         .logo {
+//             z-index: 1;
+//             position: relative;
+//             padding-top: 40px;
+//         }
+//         .contact-header-container {
+//             display: flex;
+//             margin-bottom: 40px;
+//             position: relative;
+//             z-index: 1;
+//             img {
+//                 display: block;
+//                 margin-left: auto;
+//             }
+//             .title-header {
+//                 font-weight: 600;
+//                 font-size: 48px;
+//                 line-height: 72px;
+//                 color: #ffffff;
+//                 margin-top: 90px;
+//             }
+//             .description-header {
+//                 font-weight: 500;
+//                 font-size: 18px;
+//                 line-height: 27px;
+//                 color: rgba(255, 255, 255, 0.52);
+//                 margin-top: 96px;
+//                 margin-bottom: 60px;
+//             }
+//             .media-container {
+//                 display: flex;
+//                 align-items: center;
+//                 margin-bottom: 60px;
+//                 svg {
+//                     width: 56px;
+//                     height: 56px;
+//                 }
+//                 .media-content {
+//                     display: flex;
+//                     flex-direction: column;
+//                     align-items: flex-start;
+//                     margin-left: 40px;
+//                     .title {
+//                         font-weight: 500;
+//                         font-size: 16px;
+//                         line-height: 24px;
+//                         color: #ffffff;
+//                     }
+//                     .description {
+//                         font-weight: 400;
+//                         font-size: 16px;
+//                         line-height: 24px;
+//                         text-decoration-line: underline;
+//                         color: rgba(255, 255, 255, 0.52);
+//                     }
+//                 }
+//             }
+//         }
+//         .contact-background-header {
+//             border-radius: 0px 0px 80px 0px;
+//             background: #212121;
+//             position: absolute;
+//             width: 55%;
+//             height: 100%;
+//             top: 0px;
+//             left: 0px;
+//             z-index: 0;
+//         }
+//         .background-dot {
+//             position: absolute;
+//             right: 0px;
+//             top: 0px;
+//             width: 55%;
+//             height: 100%;
+//             z-index: 0;
+//         }
+//     }
+// }
 
-@media screen and (max-width: 780px) {
-    .contacts {
-        margin-bottom: 0px;
-        min-height: calc(100vh - 130px - 24px);
-        .contacts-container {
-            .logo {
-                padding-top: 20px;
-                img {
-                    display: block;
-                    margin-left: auto;
-                    margin-right: auto;
-                }
-            }
-            padding-bottom: 0px;
-            .contact-header-container {
-                margin-bottom: 0px;
-                .title-header {
-                    font-size: 36px;
-                    line-height: 54px;
-                    margin-top: 60px;
-                }
-                .description-header {
-                    font-weight: 400;
-                    font-size: 14px;
-                    line-height: 21px;
-                    color: #8b8b8b;
-                    margin-top: 80px;
-                }
-            }
-            .contact-background-header {
-                width: 100%;
-                border-radius: 0px;
-            }
-        }
-    }
-}
+// @media screen and (max-width: 780px) {
+//     .contacts {
+//         margin-bottom: 0px;
+//         min-height: calc(100vh - 130px - 24px);
+//         .contacts-container {
+//             .logo {
+//                 padding-top: 20px;
+//                 img {
+//                     display: block;
+//                     margin-left: auto;
+//                     margin-right: auto;
+//                 }
+//             }
+//             padding-bottom: 0px;
+//             .contact-header-container {
+//                 margin-bottom: 0px;
+//                 .title-header {
+//                     font-size: 36px;
+//                     line-height: 54px;
+//                     margin-top: 60px;
+//                 }
+//                 .description-header {
+//                     font-weight: 400;
+//                     font-size: 14px;
+//                     line-height: 21px;
+//                     color: #8b8b8b;
+//                     margin-top: 80px;
+//                 }
+//             }
+//             .contact-background-header {
+//                 width: 100%;
+//                 border-radius: 0px;
+//             }
+//         }
+//     }
+// }
 
-.footer-1 {
-    position: relative;
-    z-index: 1;
-}
+// .footer-1 {
+//     position: relative;
+//     z-index: 1;
+// }
 .contact-page * {
     box-sizing: border-box;
 }
 .contact-page {
-    display: flex;
-    flex-direction: column;
     width: 100%;
     height: 100%;
     background-color: #f0f2fe;
@@ -233,6 +231,11 @@
                     font-weight: 400;
                     text-align: left;
                     margin-top: 8px;
+                    opacity: 0;
+                    transition: all 0.3s ease;
+                    &.check {
+                        opacity: 1;
+                    }
                 }
                 .input-mail {
                     display: flex;
@@ -329,7 +332,12 @@
     .cluster-faqs {
         display: flex;
         flex-direction: column;
+        width: 100%;
+        align-items: center;
+        padding-bottom: 24px;
+
         .title {
+            margin-top: 48px;
             width: 100%;
             font-size: 48px;
             font-weight: 600;
@@ -340,10 +348,206 @@
         p {
             margin: 0;
         }
-        .cluster-aq {
-            .cluster-question-button {
+        .faqs-form {
+            width: 100%;
+            margin-top: 32px;
+            display: flex;
+            flex-direction: column;
+            gap: 24px;
+            .item-faq {
+                display: flex;
+                gap: 24px;
+                padding: 24px;
+                background-color: #2121210a;
+                border-radius: 16px;
+                transition: all 0.3s ease;
+                p {
+                    color: #212121;
+                    font-size: 40px;
+                    font-weight: 600;
+                    line-height: 60px;
+                    text-align: left;
+                }
+                .cluster-aq {
+                    display: flex;
+                    // align-items: center;
+                    flex-direction: column;
+                    width: 100%;
+                    p {
+                        transition: all 0.3s ease;
+                    }
+                    .cluster-question-button {
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        transition: all 0.3s ease;
+                        svg {
+                            cursor: pointer;
+                            path {
+                                transition: all 0.3s ease;
+                            }
+                        }
+                        span {
+                            transition: all 0.3s ease;
+                            width: 100%;
+                            font-size: 28px;
+                            font-weight: 600;
+                            line-height: 42px;
+                            text-align: left;
+                            color: #212121;
+                        }
+                    }
+                    .answer {
+                        transition: all 0.3s ease;
+                        font-size: 20px;
+                        font-weight: 400;
+                        line-height: 30px;
+                        text-align: left;
+                        span {
+                            transition: all 0.65s ease;
+                            visibility: hidden;
+                            color: #fff;
+                        }
+                    }
+                }
             }
-            .answer {
+        }
+    }
+    @media screen and (max-width: 768px) {
+        .cluster-infor-title {
+            .cluster-send-mail {
+                width: 100%;
+                padding: 24px 16px;
+                background-image: url(/public/images/contacts/cdl/truck-contact-page-mobile.png);
+                background-size: cover;
+                background-position: center;
+                .form-send-mail {
+                    padding: 0;
+                    background-color: transparent;
+                    box-shadow: none;
+                    p {
+                        color: #fff;
+                    }
+                    .title {
+                        color: #fff;
+                        font-size: 36px;
+                        font-weight: 700;
+                        line-height: 54px;
+                        text-align: center;
+                    }
+                    .description {
+                        color: #fff;
+                        font-size: 14px;
+                        line-height: 21px;
+                        text-align: center;
+                    }
+
+                    .input-mail {
+                        p {
+                            margin-top: 24px;
+                        }
+                        .group-input-noti {
+                            input {
+                            }
+                        }
+                    }
+                    .input-message {
+                        margin-top: 0;
+                        .group-textarea-noti {
+                            textarea {
+                            }
+                        }
+                    }
+
+                    button {
+                        padding: 12px 0;
+                        margin: 0;
+                        line-height: 20px;
+                    }
+                    img {
+                    }
+                }
+                .contact-information {
+                    color: #fff;
+                    font-size: 24px;
+                    font-weight: 600;
+                    line-height: 36px;
+                    text-align: center;
+                }
+                .intro {
+                    margin-top: 4px;
+                    text-align: center;
+                    color: #ffffffcc;
+                    font-size: 14px;
+                    font-weight: 400;
+                    line-height: 21px;
+                    text-align: center;
+                }
+                .cluster-email {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 16px;
+                    margin-top: 16px;
+                    width: 100%;
+                    img {
+                        width: 28px;
+                        height: 28px;
+                        padding: 0;
+                    }
+                    .text-info {
+                        color: #fff;
+                    }
+                }
+                .socials-icon {
+                    width: 100%;
+                    justify-content: center;
+                    gap: 16px;
+                    margin-top: 16px;
+                }
+            }
+        }
+        .cluster-faqs {
+            padding: 0 16px 24px;
+            .title {
+                margin-top: 24px;
+                font-size: 30px;
+                font-weight: 600;
+                line-height: 45px;
+                text-align: center;
+            }
+            p {
+            }
+            .faqs-form {
+                .item-faq {
+                    p {
+                        font-size: 24px;
+                        font-weight: 600;
+                        line-height: 36px;
+                    }
+                    .cluster-aq {
+                        p {
+                        }
+                        .cluster-question-button {
+                            svg {
+                                width: 36.22px;
+                                height: 36.22px;
+                            }
+                            span {
+                                font-size: 14px;
+                                font-weight: 600;
+                                line-height: 21px;
+                            }
+                        }
+                        .answer {
+                            span {
+                                font-size: 12px;
+                                font-weight: 400;
+                                line-height: 18px;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
