--- a/src/container/about-us/index.scss
+++ b/src/container/about-us/index.scss
@@ -107,7 +107,7 @@
                 align-items: center;
                 justify-content: center;
                 flex-direction: column;
-                padding: 16px;
+                padding: 24px;
                 max-width: 335px;
                 gap: 16px;
                 background-color: #e5e8fe;
@@ -176,8 +176,10 @@
             .members {
                 width: 100%;
                 display: grid;
-                row-gap: 16px;
                 grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+                row-gap: 40px;
+                column-gap: 40px;
+
                 .info-member {
                     display: flex;
                     flex-direction: column;
@@ -212,6 +214,7 @@
                         font-weight: 400;
                         line-height: 24px;
                         text-align: center;
+                        margin-bottom: 24px;
                     }
                 }
             }
@@ -312,8 +315,12 @@
                         text-align: center;
                     }
                 }
+                .intro-2 {
+                    transform: unset;
+                }
             }
             .meet-the-team {
+                gap: 16px;
                 margin-top: 24px;
                 margin-bottom: 48px;
                 .title-meet-the-team {
@@ -324,7 +331,7 @@
                 }
                 .members {
                     grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-
+                    row-gap: 24px;
                     .info-member {
                         .avatar {
                             img {
@@ -344,7 +351,7 @@
                             font-size: 12px;
                             line-height: 18px;
                             text-align: center;
-                            margin-bottom: 24px;
+                            margin-bottom: 0;
                         }
                     }
                 }
