--- a/src/pages/contact/index.scss
+++ b/src/pages/contact/index.scss
@@ -1,131 +1,6 @@
-// .contacts {
-//     position: relative;
-//     margin-bottom: 120px;
-//     min-height: calc(100vh - 198px - 40px); // lấy theo Footer1
-//     .contacts-container {
-//         padding-bottom: 40px;
-//         .logo {
-//             z-index: 1;
-//             position: relative;
-//             padding-top: 40px;
-//         }
-//         .contact-header-container {
-//             display: flex;
-//             margin-bottom: 40px;
-//             position: relative;
-//             z-index: 1;
-//             img {
-//                 display: block;
-//                 margin-left: auto;
-//             }
-//             .title-header {
-//                 font-weight: 600;
-//                 font-size: 48px;
-//                 line-height: 72px;
-//                 color: #ffffff;
-//                 margin-top: 90px;
-//             }
-//             .description-header {
-//                 font-weight: 500;
-//                 font-size: 18px;
-//                 line-height: 27px;
-//                 color: rgba(255, 255, 255, 0.52);
-//                 margin-top: 96px;
-//                 margin-bottom: 60px;
-//             }
-//             .media-container {
-//                 display: flex;
-//                 align-items: center;
-//                 margin-bottom: 60px;
-//                 svg {
-//                     width: 56px;
-//                     height: 56px;
-//                 }
-//                 .media-content {
-//                     display: flex;
-//                     flex-direction: column;
-//                     align-items: flex-start;
-//                     margin-left: 40px;
-//                     .title {
-//                         font-weight: 500;
-//                         font-size: 16px;
-//                         line-height: 24px;
-//                         color: #ffffff;
-//                     }
-//                     .description {
-//                         font-weight: 400;
-//                         font-size: 16px;
-//                         line-height: 24px;
-//                         text-decoration-line: underline;
-//                         color: rgba(255, 255, 255, 0.52);
-//                     }
-//                 }
-//             }
-//         }
-//         .contact-background-header {
-//             border-radius: 0px 0px 80px 0px;
-//             background: #212121;
-//             position: absolute;
-//             width: 55%;
-//             height: 100%;
-//             top: 0px;
-//             left: 0px;
-//             z-index: 0;
-//         }
-//         .background-dot {
-//             position: absolute;
-//             right: 0px;
-//             top: 0px;
-//             width: 55%;
-//             height: 100%;
-//             z-index: 0;
-//         }
-//     }
-// }
-
-// @media screen and (max-width: 780px) {
-//     .contacts {
-//         margin-bottom: 0px;
-//         min-height: calc(100vh - 130px - 24px);
-//         .contacts-container {
-//             .logo {
-//                 padding-top: 20px;
-//                 img {
-//                     display: block;
-//                     margin-left: auto;
-//                     margin-right: auto;
-//                 }
-//             }
-//             padding-bottom: 0px;
-//             .contact-header-container {
-//                 margin-bottom: 0px;
-//                 .title-header {
-//                     font-size: 36px;
-//                     line-height: 54px;
-//                     margin-top: 60px;
-//                 }
-//                 .description-header {
-//                     font-weight: 400;
-//                     font-size: 14px;
-//                     line-height: 21px;
-//                     color: #8b8b8b;
-//                     margin-top: 80px;
-//                 }
-//             }
-//             .contact-background-header {
-//                 width: 100%;
-//                 border-radius: 0px;
-//             }
-//         }
-//     }
-// }
-
-// .footer-1 {
-//     position: relative;
-//     z-index: 1;
-// }
 .contact-page * {
     box-sizing: border-box;
+    font-family: Poppins, sans-serif;
 }
 .contact-page {
     width: 100%;
@@ -134,71 +9,92 @@
     .cluster-infor-title {
         display: flex;
         width: 100%;
-        .cluster-img-info {
+        background-color: #e6eaff;
+        justify-content: center;
+        align-items: center;
+        .in-form {
             display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
-            padding-left: 80px;
-            padding-bottom: 48px;
-            background-image: url(/public/images/contacts/cdl/truck-contact-page.png);
-            background-size: cover;
-            background-position: center;
-            height: 885px;
-            width: 50%;
-            .title {
-                color: #ffffff;
-                font-size: 32px;
-                line-height: 48px;
-                font-weight: 600;
-                text-align: left;
-            }
-            .intro {
-                color: #ffffffcc;
-                font-size: 18px;
-                line-height: 27px;
-                font-weight: 400;
-                text-align: left;
-                margin-top: 4px;
-            }
-            img {
-                width: 30px;
-                height: 30px;
-            }
-            .text-info {
-                color: #ffffff;
-                font-size: 18px;
-                font-weight: 500;
-                line-height: 27px;
-            }
-            .cluster-email {
+            width: 100%;
+            justify-content: center;
+            .left-form {
                 display: flex;
-                gap: 16px;
-                margin-top: 24px;
-            }
+                height: 676px;
+                width: 50%;
+                position: relative;
+                .img-back {
+                    width: initial;
+                    max-width: 662px;
 
-            .cluster-location {
-                display: flex;
-                gap: 16px;
-                margin-top: 24px;
-            }
-            .socials-icon {
-                gap: 16px;
-                margin-top: 24px;
+                    height: 100%;
+                    position: absolute;
+                    z-index: 1;
+                    right: 0;
+                }
+                .cluster-img-info {
+                    max-width: 662px;
+                    display: flex;
+                    flex-direction: column;
+                    padding-bottom: 48px;
+                    position: absolute;
+                    bottom: 0;
+                    right: 196px;
+                    z-index: 2;
+                    .title {
+                        color: #ffffff;
+                        font-size: 32px;
+                        line-height: 48px;
+                        font-weight: 600;
+                        text-align: left;
+                    }
+                    .intro {
+                        color: #ffffffcc;
+                        font-size: 18px;
+                        line-height: 27px;
+                        font-weight: 400;
+                        text-align: left;
+                        margin-top: 4px;
+                    }
+                    img {
+                        width: 30px;
+                        height: 30px;
+                    }
+                    .text-info {
+                        color: #ffffff;
+                        font-size: 18px;
+                        font-weight: 500;
+                        line-height: 27px;
+                    }
+                    .cluster-email {
+                        display: flex;
+                        gap: 16px;
+                        margin-top: 24px;
+                    }
+
+                    .cluster-location {
+                        display: flex;
+                        gap: 16px;
+                        margin-top: 24px;
+                    }
+                    .socials-icon {
+                        gap: 16px;
+                        margin-top: 24px;
+                    }
+                }
             }
         }
         .cluster-send-mail {
             width: 50%;
             display: flex;
             flex-wrap: wrap;
-            justify-content: flex-end;
+            justify-content: flex-start;
             align-items: center;
-            background-color: #e6eaff;
-            padding-right: 80px;
+
             .form-send-mail {
                 display: flex;
                 flex-direction: column;
-
+                max-width: 576px;
                 background-color: #fff;
+                margin-left: 48px;
                 padding: 24px 24px 0 24px;
                 border-radius: 16px;
                 box-shadow: 0px 4px 8px 0px #343f823d;
@@ -265,7 +161,6 @@
                     display: flex;
                     flex-direction: column;
                     gap: 4px;
-                    margin-top: 24px;
                     .group-textarea-noti {
                         .noti {
                             margin: 0;
@@ -318,13 +213,11 @@
                     font-size: 16px;
                     line-height: 24px;
                     padding: 16px 0 16px 0;
-                    margin: 32px 0 19px 0;
+                    margin: 3px 0 19px 0;
                     cursor: pointer;
                 }
                 img {
-                    max-width: 512px;
-                    max-height: 184px;
-                    padding: 0 8px 0 8px;
+                    width: 100%;
                 }
             }
         }
@@ -422,6 +315,7 @@
                 background-size: cover;
                 background-position: center;
                 .form-send-mail {
+                    margin-left: 0;
                     padding: 0;
                     background-color: transparent;
                     box-shadow: none;
@@ -447,25 +341,15 @@
                         p {
                             margin-top: 24px;
                         }
-                        .group-input-noti {
-                            input {
-                            }
-                        }
                     }
                     .input-message {
                         margin-top: 0;
-                        .group-textarea-noti {
-                            textarea {
-                            }
-                        }
                     }
 
                     button {
                         padding: 12px 0;
                         margin: 0;
                         line-height: 20px;
-                    }
-                    img {
                     }
                 }
                 .contact-information {
@@ -474,6 +358,7 @@
                     font-weight: 600;
                     line-height: 36px;
                     text-align: center;
+                    margin-top: 24px;
                 }
                 .intro {
                     margin-top: 4px;
@@ -517,8 +402,7 @@
                 line-height: 45px;
                 text-align: center;
             }
-            p {
-            }
+
             .faqs-form {
                 .item-faq {
                     p {
@@ -527,8 +411,6 @@
                         line-height: 36px;
                     }
                     .cluster-aq {
-                        p {
-                        }
                         .cluster-question-button {
                             svg {
                                 width: 36.22px;
@@ -541,6 +423,8 @@
                             }
                         }
                         .answer {
+                            margin-top: 12px;
+                            line-height: 18px;
                             span {
                                 font-size: 12px;
                                 font-weight: 400;
