--- a/src/components/header/HeaderV4.scss
+++ b/src/components/header/HeaderV4.scss
@@ -3,15 +3,15 @@
     border-bottom: 1px solid #e4e4e4;
     .header-v4 {
         position: relative;
-        height: 52px;
+        height: 56px;
         display: flex;
         justify-content: space-between;
         align-items: center;
         .logo-header-v4 {
             position: relative;
             img {
-                height: 40px; //1:4
-                max-width: 160px;
+                height: 48px; //1:4
+                width: 162px;
             }
             cursor: pointer;
             display: flex;
@@ -65,6 +65,14 @@
             .header-menu-v4 {
                 .text-nemu {
                     display: none;
+                }
+            }
+            .get-pro {
+                svg {
+                    width: 16px;
+                }
+                span {
+                    font-size: 14px;
                 }
             }
         }
